# stl5

./: create-swapfile.ps1  pyproject.toml  requirements.txt  test1.py
.github/workflows/: build.yml
enopios/: 1_🤓_Homepage.py  __main__.py  app.py
