[tool.poetry]
name = "enopios"
version = "0.2.0"
description = ""
authors = ["Simon Biggs <simon.biggs@radiotherapy.ai>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "*"
openai = "0.28"
datetime = "*"
absl-py="2.1.0"
blinker="1.8.2"
click="8.1.7"
Flask="3.0.3"
iniconfig="2.0.0"
itsdangerous="2.2.0"
Jinja2="3.1.4"
libcst="1.1.0"
Markdown="3.6"
MarkupSafe="2.1.5"
mesop="0.7.2"
mypy-extensions="1.0.0"
packaging="24.0"
pluggy="1.5.0"
protobuf="5.27.0"
pydantic="1.10.13"
Pygments="2.18.0"
pytest="8.2.2"
PyYAML="6.0.1"
typing-inspect="0.9.0"
typing_extensions="4.12.1"
watchdog="4.0.1"
Werkzeug="3.0.3"

[tool.poetry.dev-dependencies]
pyoxidizer = "*"
pre-commit = "*"
black = "22.6.0"

[tool.poetry.scripts]
enopios = "enopios.__main__:app"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
